--- a/Dtp/bin/AndroidManifest.xml
+++ b/Dtp/bin/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:permission="android.permission.WRITE_EXTERNAL_STORAGE">
         <activity
             android:name="com.vinci.dtp.MainActivity"
             android:label="@string/app_name" >
