--- a/Dtp/bin/AndroidManifest.xml
+++ b/Dtp/bin/AndroidManifest.xml
@@ -3,6 +3,11 @@
     package="com.vinci.dtp"
     android:versionCode="1"
     android:versionName="1.0" >
+    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE">
+    </uses-permission>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"> 
+    </uses-permission>
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -12,7 +17,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" android:permission="android.permission.WRITE_EXTERNAL_STORAGE">
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.vinci.dtp.MainActivity"
             android:label="@string/app_name" >
@@ -22,6 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
     </application>
-
+    
 </manifest>
